package Entities;

public class Usuario {

    private String rut;
    private String nombre;
    private String apellido;
    private String contrasenia;


    public Usuario(String rut, String nombre, String apellido, String contrasenia) {
        this.rut = rut;
        this.nombre = nombre;
        this.apellido = apellido;
        this.contrasenia = contrasenia;

    }


    public String getContrasenia() {
        return contrasenia;
    }

    public String getRut() {
        return rut;
    }

    public String getNombre() {
        return nombre;
    }

    public String getApellido() {
        return apellido;
    }
}
